--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -61,7 +61,7 @@
                         <label id="label-operator">Operador:</label>
                         <select name="operator" class="form-select">
                             {% for user in operators %}
-                                <option value="{{ user.id }}">{{ user.username|e }}</option>
+                                <option value="{{ user.id }}">{{ user.name|e }}</option>
                             {% endfor %}
                         </select>
                         <div id="check"></div>
