--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -102,14 +102,19 @@
                             <option value="9">2 años</option>
                         </select>
                     </div>
-                        <div class="col-md-3">
-                            <label>Selecciona Cliente:</label>
-                            <select name="client" class="form-select">
-                                {% for client in clients %}
-                                    <option value="{{ client.id }}">{{ client.name|e }} {{ client.lastname }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
+                    <div class="col-md-3">
+                        <label>Selecciona Cliente:</label>
+                        <select name="client" class="form-select">
+                            {% for client in clients %}
+                                <option value="{{ client.id }}">{{ client.name|e }} {{ client.lastname }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group col-md-3 col-sm-12">
+                        {{ form_row(formTask.imgTask,{'attr':{'class':'form-control ', }}) }}
+                        {{ form_errors(formTask.imgTask) }}
+
+                    </div>
                     <div class="form-group col-md-6 mt-4">
 
 
