--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -105,6 +105,7 @@
                     <div class="col-md-3">
                         <label>Selecciona Cliente:</label>
                         <select name="client" class="form-select">
+                            <option value="" selected>Sin cliente asignado</option>
                             {% for client in clients %}
                                 <option value="{{ client.id }}">{{ client.name|e }} {{ client.lastname }}</option>
                             {% endfor %}
