--- a/templates/Admin/user/edit.html.twig
+++ b/templates/Admin/user/edit.html.twig
@@ -29,7 +29,7 @@
                         {{ form_errors(formUser.lastname) }}
                     </div>
                 </div>
-                {% if is_granted('ROLE_SUPER_ADMIN') %}
+                {% if is_granted('ROLE_SUPER_ADMIN') and user.type!='super' %}
                     <br>
                     <div class="row">
                         <div class="form-group col-md-12">
@@ -62,11 +62,11 @@
                         {{ form_widget(formUser.email,{ 'attr': {'class': 'form-control','placeholder':'email@email.com' } }) }}
                         {{ form_errors(formUser.email) }}
                     </div>
-                    <div class="form-group col-md-4">
-                        <label>Tipo de usuario:</label>
-                        {{ form_widget(formUser.type,{ 'attr': {'class': 'form-select','placeholder':'email@email.com' } }) }}
-                        {{ form_errors(formUser.type) }}
-                    </div>
+                        <div class="form-group col-md-4">
+                            <label>Tipo de usuario:</label>
+                            {{ form_widget(formUser.type,{ 'attr': {'class': 'form-select'} }) }}
+                            {{ form_errors(formUser.type) }}
+                        </div>
                     <div class="form-group col-md-4">
                         <div id="select-specilialized">
                             <label>Especialidad:</label>
