--- a/templates/Front/client/index.html.twig
+++ b/templates/Front/client/index.html.twig
@@ -15,8 +15,6 @@
             <th>Tarea</th>
             <th>Descripción</th>
             <th>Detalles</th>
-
-
             </thead>
             <tbody>
             {% for task in task %}
@@ -49,39 +47,11 @@
                                 </tbody>
                             </table>
                         </div>
-
-
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
-    <script>
-        $(document).ready(function () {
-            $('#table-client').DataTable({
-                language: {
-                    "decimal": "",
-                    "emptyTable": "No hay información",
-                    "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
-                    "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
-                    "infoFiltered": "(Filtrado de _MAX_ total entradas)",
-                    "infoPostFix": "",
-                    "thousands": ",",
-                    "lengthMenu": "Mostrar _MENU_ Entradas",
-                    "loadingRecords": "Cargando...",
-                    "processing": "Procesando...",
-                    "search": "Buscar:",
-                    "zeroRecords": "Sin resultados encontrados",
-                    "paginate": {
-                        "first": "Primero",
-                        "last": "Ultimo",
-                        "next": "Siguiente",
-                        "previous": "Anterior"
-                    }
-                },
-            });
-        });
-    </script>
-
+    <script src="{{ asset('js/datatable.js') }}"></script>
 {% endblock %}
