--- a/templates/Admin/user/edit.html.twig
+++ b/templates/Admin/user/edit.html.twig
@@ -46,7 +46,7 @@
                 <div class="row" id="block-recover-pass" style="display: none">
                     <div class="form-group col-md-6">
                         <label>Contraseña:</label>
-                        {{ form_widget(formUser.password,{ 'attr': {'class': 'form-control passUser','placeholder':'Contraseña','type':'password' ,'value': user.password} }) }}
+                        {{ form_widget(formUser.password,{ 'attr': {'class': 'form-control passUser','placeholder':'Contraseña','type':'password' } }) }}
                         {{ form_errors(formUser.password) }}
                     </div>
                     <div class="form-group col-md-6">
