--- a/templates/Front/security/login.html.twig
+++ b/templates/Front/security/login.html.twig
@@ -19,7 +19,6 @@
                                value="{{ last_username }}"/>
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password" class="form-control" name="_password"/>
-
                         <div class="row" style="margin-top: 10px">
                             <div class="col-sm-6">
                                 <button class="btn btn-dark " type="submit">entra</button>
@@ -33,7 +32,7 @@
                 </div>
                 <div class="col-md-5 ">
                     <div>
-                        <img class="img-fluid img-thumbnail" src="{{ asset('images/empresas.jpg') }}">
+                        <img class="img-fluid img-thumbnail" src="{{ asset('images/tba.png') }}" width="500">
                     </div>
                 </div>
             </div>
