--- a/templates/Admin/task/index.html.twig
+++ b/templates/Admin/task/index.html.twig
@@ -7,12 +7,12 @@
     {% endblock %}
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <div class="container-jumbotron task-admin-index">
-            <h1>Tareas
-                {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
-                    <a style="color: #1d2124;float: right" href="{{ path('new.multi.task') }}"
-                       class="nav-item nav-link"><b><i class="bi bi-file-earmark-plus-fill"></i></b></a>
-                {% endif %}
-            </h1>
+            {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
+                <a style="color: #1d2124;float: right" href="{{ path('new.multi.task') }}"
+                   class="nav-item nav-link"><b><i class="bi bi-file-earmark-plus-fill"></i> NUEVA TAREA</b></a>
+            {% endif %}
+               <h1>Tareas
+                    </h1>
             <p id="info-admin-task"></p>
             <div id="admin-task" class="table-responsive table-bordered">Loading...</div>
             <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
