fix: added multitask advanced operators

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -130,7 +130,7 @@
                                 <a href="/logout" title="Salir" style="color: red">
                                     <button
                                             class="btn btn-outline-danger " style="border: 0">
-                                        <i class="bi bi-box-arrow-left" style="font-size: 0.7em;"></i> <b>SALIR{{ app.user.company.id }}</b>
+                                        <i class="bi bi-box-arrow-left" style="font-size: 0.7em;"></i> <b>SALIR</b>
                                     </button>
 
                                 </a>
