fix: added multitask advanced operators

--- a/templates/Front/default/index.html.twig
+++ b/templates/Front/default/index.html.twig
@@ -15,7 +15,7 @@
 {#                </div>#}
 {#            </div>#}
 {#        </div>#}
-        <div class="col-md-12">
+        <div class="col-md-12 p-0">
             <div class="container-fluid image-home-admin text-center">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                    <div id="welcome"><h3>Bienvenido {{ app.user.name }}  {{ app.user.lastname }}</h3></div>
