--- a/templates/Admin/user/new.html.twig
+++ b/templates/Admin/user/new.html.twig
@@ -86,7 +86,7 @@
 
 
                 {#  Todo Form Info Client: #}
-                <fieldset class="mt-3" style="padding: 20px;border-radius: 5px; background:whitesmoke"
+                <fieldset class="mt-3" style="padding: 20px;border-radius: 5px;"
                           id="new-info-client">
                     <legend>Cliente</legend>
 
