--- a/templates/Admin/user/showClient.html.twig
+++ b/templates/Admin/user/showClient.html.twig
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <h1>Información del cliente</h1>
 
-    <fieldset class="mt-3 p-3" style="background: whitesmoke;">
+    <fieldset class="mt-3 p-3" >
         <h5>Datos del cliente</h5>
         <table class="table">
             <thead>
