--- a/templates/Admin/task/show.html.twig
+++ b/templates/Admin/task/show.html.twig
@@ -216,7 +216,7 @@
                             {% endif %}
                             <div class="row mt-4 text-center">
                                 <div class=" col-12">
-                                    <button type="submit" class="btn btn-dark btn-lg">Modifica</button>
+                                    <button type="submit" class="btn btn-dark btn-lg" id="btn-edit-task">Modifica</button>
                                 </div>
                             </div>
                         {% endif %}
