fix: style the circle

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -148,7 +148,7 @@
             </nav>
         </div>
         {% if  app.request.pathinfo !='/' %}
-            <div id="block-grey">  {{ app.request.pathinfo }}</div>
+            <div id="block-grey"></div>
         {% endif %}
 
     {% endblock %}
