--- a/public/css/thecircle.css
+++ b/public/css/thecircle.css
@@ -63,16 +63,13 @@
 }
 
 .thecircle .task-admin-index, .thecircle #new-multi-task,
-.thecircle #show-task, .thecircle .content-client,.thecircle #new-service,.thecircle .user-admin-index {
+.thecircle #show-task, .thecircle .content-client,.thecircle #new-service,
+.thecircle .user-admin-index,.thecircle #request-admin,.thecircle #front-show-user{
     position: absolute;
     right: 5%;
     top: 150px;
 }
-.thecircle #front-show-user,.thecircle #request-admin{
-    top: 200px;
-    position: absolute;
-    right: 5%;
-}
+
 
 .thecircle .task-admin-index a, .thecircle #new-multi-task a, .thecircle #btn-request-send,
 .thecircle .btn-view-task ,.thecircle #btn-edit-task{
@@ -95,7 +92,7 @@
 }
 
 .thecircle .task-admin-index h1, .thecircle #new-multi-task h1, .thecircle .content-client h2 ,
-.thecircle #front-show-user h3,.thecircle #request-admin h3,.thecircle #new-service h1,.thecircle .user-admin-index h1{
+.thecircle #front-show-user h1,.thecircle #request-admin h1,.thecircle #new-service h1,.thecircle .user-admin-index h1{
     color: white;
 }
 
