--- a/templates/Admin/user/show.html.twig
+++ b/templates/Admin/user/show.html.twig
@@ -6,14 +6,14 @@
     {% endblock %}
     <div class="container-jumbotron" id="front-show-user">
         <div class="row">
-            <div class="col-md-6"><h3>Información del usuario </h3></div>
+            <div class="col-md-6"><h1>Información del usuario </h1></div>
             {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
-                <div class="col-md-6"><a style="float: right" href="{{ path('admin.user') }}" class="nav-item nav-link"><b>Listado
+                <div class="col-md-6"><a  href="{{ path('admin.user') }}" class="nav-item nav-link"><b>Listado
                             de Usuarios</b></a></div>
             {% endif %}
         </div>
         <br>
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-md-2">
                 <b>Usuario: </b><span>{{ user.username }} <small>({{ user.name }} {{ user.lastname }})</small></span>
             </div>
