--- a/public/css/thecircle.css
+++ b/public/css/thecircle.css
@@ -64,7 +64,7 @@
 
 .thecircle .task-admin-index, .thecircle #new-multi-task,
 .thecircle #show-task, .thecircle .content-client,.thecircle #new-service,
-.thecircle .user-admin-index,.thecircle #request-admin,.thecircle #front-show-user{
+.thecircle .user-admin-index,.thecircle #request-admin,.thecircle #front-show-user,.thecircle #new-user{
     position: absolute;
     right: 5%;
     top: 150px;
@@ -77,6 +77,14 @@
     border-radius: 0;
     border:0;
 
+}
+.thecircle .user-admin-index a b{
+    background: #E5A65E;
+    padding: 10px;
+    font-weight: 300;
+}
+.thecircle .user-admin-index a b:hover{
+    background-color:#cc9900;
 }
 .thecircle #btn-request-send:hover{
     background-color:#cc9900;
@@ -92,7 +100,8 @@
 }
 
 .thecircle .task-admin-index h1, .thecircle #new-multi-task h1, .thecircle .content-client h2 ,
-.thecircle #front-show-user h1,.thecircle #request-admin h1,.thecircle #new-service h1,.thecircle .user-admin-index h1{
+.thecircle #front-show-user h1,.thecircle #request-admin h1,.thecircle #new-service h1,
+.thecircle .user-admin-index h1,.thecircle #new-user h1{
     color: white;
 }
 
