--- a/templates/Admin/request/index.html.twig
+++ b/templates/Admin/request/index.html.twig
@@ -6,37 +6,37 @@
         {{ parent() }}
     {% endblock %}
 
-
     <section id="request-admin">
-        <div class="m-3 container-fluid">
+        <div class=" container-fluid">
             <h1>Peticiones de clientes</h1>
-
-            <table id="table-client" class="table-responsive table">
-                <thead>
-                <th>Petición</th>
-                <th>Cliente</th>
-                <th>Fecha/hora</th>
-                <th></th>
-                </thead>
-                <tbody>
-                {% for request in requests %}
-                    <tr class="tr-client">
-                        <td>{{ request.description }}
-                        </td>
-                        <td>{{ request.idUser.name }} {{ request.idUser.lastname }}
-                        </td>
-                        <td>
-                            {{ request.createdAt|date }}
-                        </td>
-                        <td>
-                            <a href="{{ path('new.multi.task') }}">Generar tarea</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            <div class="pt-4">
+                <table id="table-client" class="table-responsive table pt-5">
+                    <thead>
+                    <th>Petición</th>
+                    <th>Cliente</th>
+                    <th>Fecha/hora</th>
+                    <th></th>
+                    </thead>
+                    <tbody>
+                    {% for request in requests %}
+                        <tr class="tr-client">
+                            <td>{{ request.description }}
+                            </td>
+                            <td>{{ request.idUser.name }} {{ request.idUser.lastname }}
+                            </td>
+                            <td>
+                                {{ request.createdAt|date }}
+                            </td>
+                            <td>
+                                <a href="{{ path('new.multi.task') }}">Generar tarea</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <div class="m-3 container-fluid">
+        <div class="mt-3 container-fluid">
             <form method="post" name="filterRequest" enctype='multipart/form-data'>
                 <div class="row">
                     <div class="col-md-6">
@@ -48,7 +48,7 @@
 
                     </div>
                     <div class="col-md-6">
-                    <button class="btn btn-dark" type="submit">Buscar</button>
+                        <button class="btn btn-dark" type="submit">Buscar</button>
                     </div>
                 </div>
             </form>
