fix: style the circle

--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -10,7 +10,7 @@
         <div class="container-jumbotron">
             <div class="row">
                 <div class="col-md-6"><h1>Nueva tarea</h1></div>
-                <div class="col-md-6"><a style="float: right" href="{{ path('admin.task') }}" class="nav-item nav-link"><b>Listado
+                <div class="col-md-6"><a style="float: right;color:black;" href="{{ path('admin.task') }}" class="nav-item nav-link"><b><i class="bi bi-card-list"></i> Listado
                             de Tareas</b></a></div>
             </div>
 
