--- a/public/css/thecircle.css
+++ b/public/css/thecircle.css
@@ -63,8 +63,8 @@
 }
 
 .thecircle .task-admin-index, .thecircle #new-multi-task,
-.thecircle #show-task, .thecircle .content-client,.thecircle #new-service,
-.thecircle .user-admin-index,.thecircle #request-admin,.thecircle #front-show-user,.thecircle #new-user{
+.thecircle #show-task, .thecircle .content-client, .thecircle #new-service,
+.thecircle .user-admin-index, .thecircle #request-admin, .thecircle #front-show-user, .thecircle #new-user {
     position: absolute;
     right: 5%;
     top: 150px;
@@ -72,36 +72,47 @@
 
 
 .thecircle .task-admin-index a, .thecircle #new-multi-task a, .thecircle #btn-request-send,
-.thecircle .btn-view-task ,.thecircle #btn-edit-task{
+.thecircle .btn-view-task, .thecircle #btn-edit-task {
     background: #E5A65E;
     border-radius: 0;
-    border:0;
+    border: 0;
 
 }
-.thecircle .user-admin-index a b{
+
+.thecircle .user-admin-index a b, .thecircle #new-service span a b,.thecircle .task-admin-index  a {
     background: #E5A65E;
     padding: 10px;
     font-weight: 300;
 }
-.thecircle .user-admin-index a b:hover{
-    background-color:#cc9900;
-}
-.thecircle #btn-request-send:hover{
-    background-color:#cc9900;
-}
-.thecircle #btn-edit-task:hover{
-    background-color:#cc9900;
-}
-.thecircle #btn-request-send,.thecircle #btn-edit-task{
-    width: 100%;
-}
-.thecircle .content-client textarea{
-    border:0;
+
+.thecircle .user-admin-index a b:hover {
+    background-color: #cc9900;
 }
 
-.thecircle .task-admin-index h1, .thecircle #new-multi-task h1, .thecircle .content-client h2 ,
-.thecircle #front-show-user h1,.thecircle #request-admin h1,.thecircle #new-service h1,
-.thecircle .user-admin-index h1,.thecircle #new-user h1{
+.thecircle  #new-service span a b:hover {
+    background-color: #cc9900;
+}
+
+.thecircle #btn-request-send:hover {
+    background-color: #cc9900;
+}
+.thecircle .task-admin-index  a:hover{
+    background: #cc9900;
+}
+
+
+
+.thecircle #btn-request-send, .thecircle #btn-edit-task {
+    width: 100%;
+}
+
+.thecircle .content-client textarea {
+    border: 0;
+}
+
+.thecircle .task-admin-index h1, .thecircle #new-multi-task h1, .thecircle .content-client h2,
+.thecircle #front-show-user h1, .thecircle #request-admin h1, .thecircle #new-service h1,
+.thecircle .user-admin-index h1, .thecircle #new-user h1 {
     color: white;
 }
 
@@ -127,8 +138,9 @@
 .thecircle thead, .thecircle td {
     border-color: #f4eae1;
 }
-.thecircle .dataTable tbody tr{
-    background-color: #f4eae1!important;
+
+.thecircle .dataTable tbody tr {
+    background-color: #f4eae1 !important;
 }
 
 .thecircle table tr {
