--- a/templates/Admin/service/index.html.twig
+++ b/templates/Admin/service/index.html.twig
@@ -10,8 +10,8 @@
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 <h1>Servicios
                     {% if  is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
-                        <a style="color: #1d2124;float: right" href="{{ path('newservice') }}"
-                           class="nav-item nav-link"><b><i class="bi bi-bag-plus-fill"></i></b></a>
+                        <span><a style="color: #1d2124;float: right;font-size: 0.5em" href="{{ path('newservice') }}"
+                           class="nav-item nav-link"><b><i class="bi bi-bag-plus-fill"></i> NUEVO SERVICIO</b></a></span>
                     {% endif %}
                 </h1>
                 <p id="info-admin"></p>
