--- a/templates/Admin/task/index.html.twig
+++ b/templates/Admin/task/index.html.twig
@@ -8,7 +8,7 @@
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <div class="container-jumbotron task-admin-index">
             {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
-                <a style="color: #1d2124;float: right" href="{{ path('new.multi.task') }}"
+                <a style="color: #1d2124;float: right;font-size: 1.1em" href="{{ path('new.multi.task') }}"
                    class="nav-item nav-link"><b><i class="bi bi-file-earmark-plus-fill"></i> NUEVA TAREA</b></a>
             {% endif %}
                <h1>Tareas
