--- a/templates/Admin/request/index.html.twig
+++ b/templates/Admin/request/index.html.twig
@@ -47,7 +47,7 @@
                         </select>
 
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 text-center  mb-2">
                         <button class="btn btn-dark" type="submit">Buscar</button>
                     </div>
                 </div>
